--- a/src/Track/Track.css
+++ b/src/Track/Track.css
@@ -23,13 +23,14 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	height: 50px;
-	width: 200px;
+	width: 250px;
 }
 
 .Track-img {
 	height: 40%;
 	width: 40%;
+	position: relative;
+	left: 60px;
 }
 
 .Track-information h3 {
