--- a/src/Playlist/Playlist.css
+++ b/src/Playlist/Playlist.css
@@ -1,27 +1,56 @@
 .playlist-container {
-    padding: 20px;
-    background-color: #2a2a2a;
-    border-radius: 10px;
-    margin: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  background-color: #2a2a2a;
+  border-radius: 10px;
+  margin: 10px;
+  box-shadow: 1px 1px 4px rgba(235, 232, 232, 0.5);
 }
-  
+
 .playlist-container input {
-    width: 100%;
-    border: 0;
-    outline: 0;
-    background: transparent;
-    border-bottom: 1px solid #6f6f6f;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.55rem;
-    color: #fff;
-  }
-  
+  width: 100%;
+  border: 0;
+  outline: 0;
+  background: transparent;
+  border-bottom: 1px solid #6f6f6f;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: 1.55rem;
+  color: #fff;
+}
+
+
+.Playlist-button {
+  font-size: 18px;
+  cursor: pointer;
+  width: 50%;
+  margin-top: 12px;
+  padding: 12px;
+  border-radius: 50px;
+  background-color: rgb(12, 111, 53);
+  transition: background-color .25s;
+  border: 0px;
+  color: #fff;
+  font-weight: 500;
+}
+
+.Playlist-button:hover {
+  background-color: rgba(108, 65, 233, .7);
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+
+
+@media (max-width: 768px) {
+
   .Playlist-button {
     font-size: 18px;
     cursor: pointer;
     width: 50%;
-    margin-top: 12px;
     padding: 12px;
     border-radius: 50px;
     background-color: rgb(12, 111, 53);
@@ -29,13 +58,6 @@
     border: 0px;
     color: #fff;
     font-weight: 500;
+    width: 80%;
   }
-  
-  .Playlist-button:hover {
-    background-color: rgba(108, 65, 233, .7);
-  }
-  
-  ::-webkit-scrollbar {
-      width: 0px;
-      background: transparent;
-  }
+}
