--- a/src/Results/Results.css
+++ b/src/Results/Results.css
@@ -1,7 +1,8 @@
 .results-container {
-    padding: 20px;
+    padding: 0px 20px;
+    min-height: 128px;
     background-color: #2a2a2a;
     border-radius: 10px;
     margin: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 1px 1px 4px rgba(235, 232, 232, 0.5);
 }
