--- a/src/Search/Search.css
+++ b/src/Search/Search.css
@@ -7,6 +7,7 @@
     border-radius: 10px;
     margin: 10px;
     box-shadow: 1px 1px 4px rgba(235, 232, 232, 0.5);
+    padding: 5px 20px 20px 20px;
 }
 
 .search-container label {
